tdf#133377 OOXML Fix storage of date in Custom Properties

During exporting documents into OOXML formats (docx, xlsx, pptx),
if custom properties have Date format, the day and year were switched.

This commit fixes that.

Change-Id: Id497602eb3354de78bfd52bf5ef61d32aafd957d